--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "etsrc.github.io",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://etsrc.github.io/",
   "type": "module",
   "scripts": {
     "dev": "vite",
