--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
           git clone --branch gh-pages --single-branch https://github.com/${{ github.repository }} gh-pages
+          git switch -c gh-pages
 
           rsync -av --delete dist/ gh-pages/
 
