--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,10 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
           git clone --branch gh-pages --single-branch https://github.com/${{ github.repository }} gh-pages
-          git switch -c gh-pages
 
-          rsync -av --delete dist/ gh-pages/
+          rsync -av --delete --exclude='.git' dist/ gh-pages/
 
           cd gh-pages
           git add .
           git commit -m "Deploy from GitHub Actions" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} gh-pages
+          git push
