--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
 
           git clone --branch gh-pages --single-branch https://github.com/${{ github.repository }} gh-pages
 
-          rsync -av --delete --exclude='.git' dist/ gh-pages/
+          rm -rf gh-pages/* && cp -r dist/* gh-pages/
 
           cd gh-pages
           git add .
