--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
   - Vibe Coding: vibe-coding.md
   - Golang: golang.md
   - Command Line: command-line.md
+  - Learning: learning.md
 #  - JavaScript: javascript.md
 #  - Tools: tools.md
 #  - Guides:
